# tbr

./: Cargo.toml  README.md  build.rs  i18n.toml
.github/workflows/: binary.yaml  rust.yml
assets/: bright.toml  dark.toml
assets/gui/: gtk.css
assets/i18n/: en_US.ftl  zh_CN.ftl
src/: book.rs  color.rs  common.rs  config.rs  container.rs  controller.rs  gui.rs  html_convertor.rs  html_parser.rs  i18n.rs  list.rs  main.rs  open.rs  terminal.rs  view.rs  xhtml.rs  xhtml_entities.md
src/book/: epub.rs  haodoo.rs  html.rs  txt.rs  zip.rs
src/book/epub/: parser.rs
src/container/: folder.rs  zip.rs
src/gui/: chapter_list.rs  custom_style.rs  dialogs.rs  dict.rs  find_list.rs  font.rs  history.rs  math.rs  render.rs  settings.rs  view.rs
src/gui/render/: han.rs  imp.rs  mod.rs  xi.rs
src/terminal/: input_method.rs  view.rs
src/terminal/view/: han.rs  xi.rs
src/view/: han.rs  xi.rs
