[package]
name = "tbr"
description = "Terminal and GUI ebook reader"
authors = ["zang.loo"]
version = "2.2.0"
homepage = "https://github.com/zangloo/tbr"
repository = "https://github.com/zangloo/tbr.git"
keywords = ["terminal", "gui", "ebook", "epub"]
license = "GPL-2.0-only"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

[features]
default = ["gui"]
gui = ["i18n"]
i18n = []

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }

[target.'cfg(unix)'.dependencies]
cursive = { version = "0.20", features = ["toml"] }

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.7"
rust-embed = { version = "6.6", features = ["include-exclude"] }
xmltree = "0.10"
unicode-width = "0.1"
fancy-regex = "0.11"
chardetng = "0.1"
encoding_rs = "0.8"
zip = "0.6"
lexical-sort = "0.3"
strip_bom = "1.0"

markup5ever = "0.11"
scraper = "0.16"
lightningcss = "=1.0.0-alpha.41"
ego-tree = "0.6"

fluent = "0.16"
unic-langid = "0.9"
sys-locale = "0.3"

eframe = "0.21"
egui = "0.21"
egui_extras = { version = "0.21", features = ["svg"] }
rfd = "0.11"
image = "0.24"
egui-modal = "0.2"

stardict = { git = "https://github.com/zangloo/stardict.git" }
html-escape = "0.2"
elsa = "1.8"
