[package]
name = "tbr"
description = "Terminal and GUI ebook reader"
authors = ["zang.loo"]
version = "2.3.3"
homepage = "https://github.com/zangloo/tbr"
repository = "https://github.com/zangloo/tbr.git"
keywords = ["terminal", "gui", "ebook", "epub"]
license = "GPL-2.0-only"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

[features]
default = ["gui"]
gui = ["i18n", "dict", "dep:gtk4", "dep:pangocairo", "dep:ab_glyph", "dep:resvg"]
i18n = ["dep:fluent", "dep:unic-langid", "dep:sys-locale"]
dict = ["dep:stardict", "dep:html-escape", "dep:elsa"]

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }

[target.'cfg(unix)'.dependencies]
cursive = { version = "0.20", features = ["toml"] }

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.7"
rust-embed = { version = "6.6", features = ["include-exclude"] }
xmltree = "0.10"
unicode-width = "0.1"
fancy-regex = "0.11"
chardetng = "0.1"
encoding_rs = "0.8"
zip = "0.6"
lexical-sort = "0.3"
strip_bom = "1.0"

markup5ever = "0.11"
scraper = "0.17"
lightningcss = "=1.0.0-alpha.41"
ego-tree = "0.6"

fluent = { version = "0.16", optional = true }
unic-langid = { version = "0.9", optional = true }
sys-locale = { version = "0.3", optional = true }

gtk4 = { version = "0.7", features = ["v4_10"], optional = true }
pangocairo = { version = "0.18", optional = true }
ab_glyph = { version = "0.2", optional = true }
resvg = { version = "0.35", optional = true }

stardict = { version = "0.2", optional = true }
#stardict = { git = "https://github.com/zangloo/stardict.git", optional = true }
html-escape = { version = "0.2", optional = true }
elsa = { version = "1.8", optional = true }
