[package]
name = "tbr"
description = "Terminal and GUI ebook reader"
authors = ["zang.loo"]
version = "2.4.3"
homepage = "https://github.com/zangloo/tbr"
repository = "https://github.com/zangloo/tbr.git"
keywords = ["terminal", "gui", "ebook", "epub"]
license = "GPL-2.0-only"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

[features]
default = ["gui"]
gui = [
    "i18n",
    "dict",
    "open",
    "dep:gtk4",
    "dep:pangocairo",
    "dep:ab_glyph",
    "dep:resvg",
    "dep:fontdb",
    "dep:ouroboros",
]
i18n = ["dep:fluent", "dep:unic-langid", "dep:sys-locale"]
dict = ["dep:stardict", "dep:html-escape"]
open = ["dep:rand", "dep:open"]

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend", "toml"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
cursive = { version = "0.20", features = ["toml"] }
rusqlite = { version = "0.31" }

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
rust-embed = { version = "8.0", features = ["include-exclude"] }
roxmltree = "0.19"
unicode-width = "0.1"
fancy-regex = "0.13"
chardetng = "0.1"
encoding_rs = "0.8"
zip = "1.1.1"
lexical-sort = "0.3"
elsa = "1.8"
bitflags = "2.5"

# scraper need v0.11
markup5ever = "0.11"
scraper = "0.19"
lightningcss = "=1.0.0-alpha.55"
ego-tree = "0.6"
indexmap = "2.0"

fluent = { version = "0.16", optional = true }
unic-langid = { version = "0.9", optional = true }
sys-locale = { version = "0.3", optional = true }

gtk4 = { version = "0.8", features = ["v4_12"], optional = true }
pangocairo = { version = "0.19", optional = true }
ab_glyph = { version = "0.2", optional = true }
resvg = { version = "0.41", optional = true }
fontdb = { version = "0.16", optional = true }
ouroboros = { version = "0.18", optional = true }

stardict = { version = "0.2", optional = true }
#stardict = { git = "https://github.com/zangloo/stardict.git", optional = true }
html-escape = { version = "0.2", optional = true }

rand = { version = "0.8", optional = true }
open = { version = "5.0", optional = true }
